# INGot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  run_ingot.sh
config/: private_categories.example.toml  private_classifications.example.toml  silver_classifications.sql
docs/: output-tree.txt  star-schema.mmd
docs/sample/: dim_category.csv  dim_counterparty.csv  dim_date.csv  dim_payment_method.csv  fact_expenses.csv  fact_income.csv
pipeline/: bronze.py  categories.py  counterparty.py  dimensions.py  dq.py  gold.py  silver.py  udf.py
pipeline/schemas/: bronze.py  dim.py
tests/: conftest.py  test_bronze_unit.py  test_categories_unit.py  test_counterparty_unit.py  test_dimensions_unit.py  test_invariants.py  test_silver_unit.py
utils/: cli.py  helpers.py  logger.py  spark.py
